--- a/config_cacti_csapr.json
+++ b/config_cacti_csapr.json
@@ -1,13 +1,14 @@
 {
-    "run_idclouds": 1,
-    "run_tracksingle": 1,
-    "run_gettracks": 1,
-    "run_finalstats": 1,
+    "run_idclouds": 0,
+    "run_tracksingle": 0,
+    "run_gettracks": 0,
+    "run_finalstats": 0,
     "run_labelcell": 1,
-    "startdate": "20181125.2200",
-    "enddate": "20181127.2359",
-    "run_parallel": 1,
+    "startdate": "20181110.1800",
+    "enddate": "20181112.2359",
+    "run_parallel": 0,
     "nprocesses": 10,
     "root_path": "/global/cscratch1/sd/feng045/iclass/cacti/arm/csapr/",
-    "clouddata_path": "/global/cscratch1/sd/feng045/iclass/cacti/arm/csapr/conv_mask/"
+    "clouddata_path": "/global/cscratch1/sd/feng045/iclass/cacti/arm/csapr/conv_mask/",
+    "driftfile": "/global/cscratch1/sd/feng045/iclass/cacti/arm/csapr/csapr_advection_data/11_10to12Drifts.txt"
 }
