--- a/config/global_gpm_mcs_workflow_config.yml
+++ b/config/global_gpm_mcs_workflow_config.yml
@@ -16,8 +16,10 @@ run_robustmcs : true  # Filter potential mcs cases using nmq radar variables
 run_labelmcs : true  # Create maps of MCSs
 
 # Cores, parallel, etc
-run_parallel: 1
-nprocesses : 32  # Number of processors to use if run_parallel is set to 1
+#run_parallel: 1
+#nprocesses : 32  # Number of processors to use if run_parallel is set to 1
+run_parallel: 0
+nprocesses : 1  # Number of processors to use if run_parallel is set to 1
 
 startdate: '20150101.0000'
 enddate: '20160101.2300'
