--- a/config/config_csapr500m_test.yaml
+++ b/config/config_csapr500m_test.yaml
@@ -64,7 +64,7 @@ timegap: 0.5           # hour
 area_thresh: 4         # km^2
 miss_thresh: 0.2       # Missing data threshold. (0.1 = 10%)
 othresh: 0.3           # overlap percentage threshold
-lengthrange: [2, 60]   # A vector [minlength,maxlength] to specify the lifetime range for the tracks
+duration_range: [2, 60]   # A vector [minlength,maxlength] to specify the duration range for the tracks
 maxnclouds: 1000       # Maximum number of clouds in one snapshot
 nmaxlinks: 10          # Maximum number of clouds that any single cloud can be linked to
 keepsingletrack: 1     # Keep tracks that has only 1 time
