Implemented Scipy sparse array to save track stats.
In theory, this should alleviate the need for limiting the maximum track duration as there is no need to preallocate large 2D dense arrays for storing the track stats variables. In practice, subsequent MCS identification and track stats files are still saved as dense array netCDF files for ease of use, as the number of MCS tracks are typically much smaller than total number of tracked clouds.

1. Modified trackstats_driver.py to use sparse array for storing the track statistics variables. Sparse array form of trackstats netCDF file is now the default file output. Dense array trackstats netCDF output is optional, with a flag added in the config file.
2. Modified identifymcs.py to use sparse array trackstats file. This change should significantly reduce the memory usage of the code.
3. Rewrote the code for matching merge/split clouds to MCS in identifymcs.py to make use of track start/end tracknumbers. A small bug was fixed where merge/split clouds are not saved for all time steps of an MCS. The new code should be more efficient and easier to understand.
4. Fixed a bug in trackstats_driver.py. After removing short-lived tracks and adjusting merge/split track numbers, the track start/end status must be updated to match the adjusted track numbers.

--- a/config/config_gpm_mcs_saag.yml
+++ b/config/config_gpm_mcs_saag.yml
@@ -9,16 +9,16 @@ processing_config: "global_gpm_mcs_processing_config.yml"
 run_idfeature : False
 run_tracksingle : False
 run_gettracks : False
-run_trackstats : True
-run_identifymcs : False
-run_matchpf : False
-run_robustmcs : False
-run_mapfeature : False
-run_speed: False
+run_trackstats : False
+run_identifymcs : True
+run_matchpf : True
+run_robustmcs : True
+run_mapfeature : True
+run_speed: True
 
 # Cores, parallel, etc
 run_parallel: 1
-nprocesses : 30  # Number of processors to use if run_parallel is set to 1
+nprocesses : 25  # Number of processors to use if run_parallel is set to 1
 
 # Start/end date and time
 startdate: '20190122.0000'
@@ -38,8 +38,10 @@ databasename: merg_
 time_format: 'yyyymoddhh'
 # Input files directory
 clouddata_path: '/global/cscratch1/sd/feng045/SAAG/GPM/tb_rr/2018_2019/'
+#clouddata_path: '/Users/feng045/data/SAAG/GPM/tb_rr/2019/'
 # Working directory for the tracking data
 root_path: '/global/cscratch1/sd/feng045/SAAG/GPM/pyflex_test/'
+#root_path: '/Users/feng045/data/SAAG/GPM/pyflex_test/'
 # Working sub-directory names
 tracking_path_name: 'tracking'
 stats_path_name: 'stats'
@@ -58,6 +60,9 @@ cloudidmethod: 'label_grow'  # Option: futyan3:  identify cores and cold anvils 
 # Flag to remove short-lived tracks [< min(duration_range)] that are not mergers/splits with other tracks
 # 0:keep all tracks; 1:remove short tracks
 remove_shorttracks: 1
+# Set this flag to 1 to write a dense (2D) trackstats netCDF file
+# Note that for datasets with lots of tracks, the memory consumption could be very large
+trackstats_dense_netcdf: 1
 
 idclouds_hourly: 1  # 0:  No, 1:  Yes
 idclouds_minute: 30
