--- a/config/config_gpm_mcs_saag.yml
+++ b/config/config_gpm_mcs_saag.yml
@@ -6,10 +6,10 @@ processing_config: "global_gpm_mcs_processing_config.yml"
 
 # Processing steps:
 # Maybe worth nesting these in sets of dictionaries
-run_idfeature : False
-run_tracksingle : False
-run_gettracks : False
-run_trackstats : False
+run_idfeature : True
+run_tracksingle : True
+run_gettracks : True
+run_trackstats : True
 run_identifymcs : True
 run_matchpf : True
 run_robustmcs : True
@@ -155,13 +155,15 @@ label_filebase:  'cloudtrack_'
 pfdata_filebase:  'merg_'
 rainaccumulation_filebase:  'merg_'
 
-# Specify data structure
-datatimeresolution: 1  # hours
-dimname: 'nclouds'
-numbername: 'convcold_cloudnumber'
-typename: 'cloudtype'
-npxname: 'ncorecoldpix'
+# Define tracked feature variable names
+#dimname: 'nclouds'
+feature_varname: 'feature_number'
+nfeature_varname: 'nfeatures'
+#typename: 'cloudtype'
+featuresize_varname: 'npix_feature'
 
+# Specify data structure
+datatimeresolution: 1.0  # hours
 tdimname: 'time'
 xdimname: 'lat'
 ydimname: 'lon'
