--- a/config/config_gpm_mcs_saag.yml
+++ b/config/config_gpm_mcs_saag.yml
@@ -28,9 +28,9 @@ enddate: '20190127.0000'
 #startdate: '20180601.0000'
 #enddate: '20190630.2300'
 # Data source, description
-datasource: gpmirimerg
-datadescription: gpm
-databasename: merg_
+#datasource: gpmirimerg
+#datadescription: gpm
+databasename: 'merg_'
 
 # Specify date/time string format in the file name
 # E.g., radar_20181101.011503.nc --> yyyymodd.hhmmss
@@ -55,7 +55,35 @@ landmask_varname: 'landseamask'
 # Specify types of feature being tracked
 # This adds additional feature-specific statistics to be computed
 feature_type: 'tb_pf'
-cloudidmethod: 'label_grow'  # Option: futyan3:  identify cores and cold anvils and expand to get warm anvil, futyan4=identify core and expand for cold and warm anvils
+
+# Cloud identification parameters
+geolimits: [-90, -360, 90, 360] # 4-element array with plotting boundaries [lat_min, lon_min, lat_max, lon_max]
+pixel_radius:  10.0  # km
+timegap:  3.1  # hour
+area_thresh:  800  # km^2
+miss_thresh:  0.35  # Missing data fraction threshold
+cloudtb_core:  225.0  # K
+cloudtb_cold:  241.0  # K
+cloudtb_warm:  261.0  # K
+cloudtb_cloud:  261.0  # K
+absolutetb_threshs: [160, 330]  # K [min, max] brightness temperature allowed.
+warmanvilexpansion:  0  # If this is set to one, then the cold anvil is spread laterally until it exceeds the warm anvil threshold
+mincoldcorepix:  4  # Minimum number of pixels for the cold core, needed for futyan version 4 cloud identification code. Not used if use futyan version 3.
+smoothwindowdimensions:  3  # Was 10. Dimension of the Box2DKernel filter on Tb.
+medfiltsize: 5      # Window size to perform medfilt2d to fill missing IR pixels, must be an odd number
+cloudidmethod: 'label_grow'
+# Specific parameters to link cloud objects using PF
+linkpf:  1  # Set to 1 to turn on linkpf option; default: 0
+pf_smooth_window:  5  # Smoothing window for identifying PF
+pf_dbz_thresh:  3  # [dBZ] for reflectivity, or [mm/h] for rainrate
+pf_link_area_thresh:  648.0  # [km^2]
+
+# Tracking parameters
+othresh:  0.5  # overlap fraction threshold
+nmaxlinks:  200  # Maximum number of clouds that any single cloud can be linked to
+maxnclouds:  3000  # Maximum number of clouds in one snapshot
+duration_range: [2, 200] # A vector [minlength,maxlength] to specify the duration range for the tracks
+#keepsingletrack: 1  # Keep tracks that has only 1 time
 #keep_singlemergesplit: 1  # Options: 0=All short tracks are removed, 1=Only short tracks without mergers or splits are removed
 # Flag to remove short-lived tracks [< min(duration_range)] that are not mergers/splits with other tracks
 # 0:keep all tracks; 1:remove short tracks
@@ -64,39 +92,14 @@ remove_shorttracks: 1
 # Note that for datasets with lots of tracks, the memory consumption could be very large
 trackstats_dense_netcdf: 1
 
-idclouds_hourly: 1  # 0:  No, 1:  Yes
-idclouds_minute: 30
-
-# Specify cloud tracking parameters
-geolimits: [-90, -360, 90, 360] # 4-element array with plotting boundaries [lat_min, lon_min, lat_max, lon_max]
-pixel_radius:  10.0  # km
-timegap:  3.1  # hour
-area_thresh:  800  # km^2
-miss_thresh:  0.35  # JOE WAS 0.2 # Missing data threshold. If missing data in the domain from this file is greater than this value, this file is considered corrupt and is ignored. (0.1:  10%)
-cloudtb_core:  225.0  # K
-cloudtb_cold:  241.0  # K
-cloudtb_warm:  261.0  # K
-cloudtb_cloud:  261.0  # K
-othresh:  0.5  # overlap percentage threshold
-duration_range: [2, 200] # A vector [minlength,maxlength] to specify the duration range for the tracks
-nmaxlinks:  200  # Maximum number of clouds that any single cloud can be linked to
-maxnclouds:  3000  # Maximum number of clouds in one snapshot
-keepsingletrack: 1  # Keep tracks that has only 1 time
-absolutetb_threshs: [160, 330]  # k A vector [min, max] brightness temperature allowed. Brightness temperatures outside this range are ignored.
-warmanvilexpansion:  0  # If this is set to one, then the cold anvil is spread laterally until it exceeds the warm anvil threshold
-mincoldcorepix:  4  # Minimum number of pixels for the cold core, needed for futyan version 4 cloud identification code. Not used if use futyan version 3.
-smoothwindowdimensions:  3  # Dimension of the boxcar filter used for futyan version 4. Not used in futyan version 3
-# smoothwindowdimensions:  10                # Dimension of the boxcar filter used for futyan version 4. Not used in futyan version 3
-# medfiltsize:  5                            # Window size to perform medfilt2d to fill missing IR pixels, must be an odd number
-
-# Specify MCS parameters
+# MCS Tb parameters
 mcs_tb_area_thresh:  40000  # Tb area threshold [km^2]
 mcs_tb_duration_thresh:  4  # Tb minimum length of a mcs [hr]
-mcs_tb_eccentricitythresh:  0.7  # Tb eccentricity at time of maximum extent
+#mcs_tb_eccentricitythresh:  0.7  # Tb eccentricity at time of maximum extent
 mcs_tb_split_duration:  12  # Tb tracks smaller or equal to this length will be included with the MCS splits from
 mcs_tb_merge_duration:  12  # Tb tracks smaller or equal to this length will be included with the MCS merges into
 mcs_tb_gap: 1  # Allowable gap in Tb data to exceed area threshold [hr]
-
+# MCS PF parameters
 mcs_pf_majoraxis_thresh:  100  # MCS PF major axis length lower limit [km]
 max_pf_majoraxis_thresh:  1800  # MCS PF major axis length upper limit [km]
 mcs_pf_durationthresh:  4  # PF minimum length of mcs [hr]
@@ -104,6 +107,7 @@ mcs_pf_aspectratiothresh:  4  # PF aspect ragio require to define a squall lines
 mcs_pf_lifecyclethresh:  4  # Minimum MCS lifetime required to classify life stages
 mcs_pf_majoraxis_for_lifetime:  20  # Minimum PF size to count PF lifetime [km]
 mcs_pf_gap:  1  # Allowable gap in data for subMCS characteristics [hr]
+landfrac_thresh: 90  # [%] Define threshold for PF land fraction
 
 # Specify rain rate parameters
 pf_rr_thres:  2.0  # Rain rate threshold [mm/hr]
@@ -111,12 +115,6 @@ nmaxpf: 3  # Maximum number of precipitation features that can be within a cloud
 nmaxcore: 20  # Maximum number of convective cores that can be within a cloud feature
 pcp_thresh:  1.0  # Pixels with hourly precipitation larger than this will be labeled with track number
 heavy_rainrate_thresh:  10.0  # Heavy rain rate threshold [mm/hr]
-
-# Specific parameters to link cloud objects using PF
-linkpf:  1  # Set to 1 to turn on linkpf option; default: 0
-pf_smooth_window:  5  # Smoothing window for identifying PF
-pf_dbz_thresh:  3  # [dBZ] for reflectivity, or [mm/h] for rainrate
-pf_link_area_thresh:  648.0  # [km^2]
 
 # MCS PF parameter coefficients [intercept, slope]
 # These parameters are derived with pf_rr_thres:  2 mm/h
@@ -145,32 +143,21 @@ coefs_pf_heavyratio:  [3.419024, 0.4387090]  # 10% [recommended]
 # coefs_pf_heavyratio:  [4.592209, 0.6107371]  # 20%
 # coefs_pf_heavyratio:  [8.389616, 0.5079337]  # 25%
 
-# Specify filenames and locations
-cloud_variable_name:  'Tb'
+# Specific to GPM Tb+IMERG combined dataset
+tb_varname:  'Tb'
+pcp_varname: 'precipitationCal'
 clouddatasource:  'gpmirimerg'
 pfdatasource:  'imerg'
-datadescription:  'SAAG'
 databasename:  'merg_'
-label_filebase:  'cloudtrack_'
-pfdata_filebase:  'merg_'
-rainaccumulation_filebase:  'merg_'
+idclouds_hourly: 1  # 0:  No, 1:  Yes
+idclouds_minute: 30  # 0 or 30 min, which minute mark to use the Tb data
+datatimeresolution: 1.0  # hours
+landvarname: 'landseamask'
 
 # Define tracked feature variable names
-#dimname: 'nclouds'
 feature_varname: 'feature_number'
 nfeature_varname: 'nfeatures'
-#typename: 'cloudtype'
 featuresize_varname: 'npix_feature'
-
-# Specify data structure
-datatimeresolution: 1.0  # hours
-tdimname: 'time'
-xdimname: 'lat'
-ydimname: 'lon'
-pfvarname: 'precipitationCal'
-pcpvarname: 'precipitation'
-landvarname: 'landseamask'
-landfrac_thresh: 90  # define threshold for land
 
 # Track statistics output file dimension names
 tracks_dimname: 'tracks'
@@ -185,7 +172,8 @@ pixeltracking_filebase: 'mcstrack_'
 mcsfinal_filebase: 'mcs_tracks_final_'
 
 # Feature movement speed parameters
-lag: 1
-track_variable_for_speed: "pcptracknumber"
-min_size_thresh_for_speed: 20
+lag_for_speed: 1  # lag intervals between tracked features to calculate movement
+track_number_for_speed: "pcptracknumber"
+track_field_for_speed: 'precipitation'
+min_size_thresh_for_speed: 20 # [km] Min PF major axis length to calculate movement
 max_speed_thresh: 50  # [m/s]
