--- a/config/config_csapr500m_nersc.yml
+++ b/config/config_csapr500m_nersc.yml
@@ -16,10 +16,13 @@ run_mapfeature: True
 # Start/end date and time
 startdate: '20181015.0000'
 enddate: '20190303.0000'
+#startdate: '20181112.0000'
+#enddate: '20181113.0000'
 
 # Parallel processing set up
-run_parallel: 1
-nprocesses: 30
+# run_parallel: 1 (local cluster), 2 (Dask MPI)
+run_parallel: 2
+nprocesses: 30  # Number of processors to use if run_parallel=1
 
 databasename: taranis_corcsapr2cfrppiqcM1_convmask.c1.
 # Specify date/time string format in the file name
