Added run_parallel option in the code to use Dask-MPI.
1. Setting run_parallel=2 in the config file will use Dask-MPI. The Dask scheduler is set up in the slum script, default location on NERSC at $SCRATCH/scheduler.json.
2. Removed reference to the reflectivity variable in idcell_csapr.py, since all variables in the input file are passed to the output file.

--- a/config/config_gpm_mcs_saag.yml
+++ b/config/config_gpm_mcs_saag.yml
@@ -6,8 +6,8 @@ processing_config: "global_gpm_mcs_processing_config.yml"
 
 # Processing steps:
 # Maybe worth nesting these in sets of dictionaries
-run_idfeature : True
-run_tracksingle : True
+run_idfeature : False
+run_tracksingle : False
 run_gettracks : True
 run_trackstats : True
 run_identifymcs : True
