WIP: testing configurations to run in dask-mpi.
For CACTI CSAPR cell tracking, running with dask local cluster (run_parallel=1) is actually faster than with dask-mpi (run_parallel=2), presumably due to increased cost in cross-node communications. The slurm script and config file is changed to using local cluster instead.

There are still issues with GPM MCS tracking code with dask-mpi that are being diagnosed, specifically in mapmcspf.py. The code would crash on line 72 when opening the MCS track stats netCDF file when --cpus-per-task is set to larger than 1 (e.g., "--cpus-per-task=2" and "srun -u dask-mpi --nthreads=2"). The problem is reported to NERSC and waiting for response.

--- a/config/config_gpm_mcs_saag.yml
+++ b/config/config_gpm_mcs_saag.yml
@@ -8,11 +8,11 @@ processing_config: "global_gpm_mcs_processing_config.yml"
 # Maybe worth nesting these in sets of dictionaries
 run_idfeature : False
 run_tracksingle : False
-run_gettracks : True
-run_trackstats : True
-run_identifymcs : True
-run_matchpf : True
-run_robustmcs : True
+run_gettracks : False
+run_trackstats : False
+run_identifymcs : False
+run_matchpf : False
+run_robustmcs : False
 run_mapfeature : True
 run_speed: True
 
