Dask-mpi fix (#10)
* Made small changes to fix issues encountered in working with new datasets.

1. Added an optional time difference threshold “idclouds_dt_thresh” in the config file to allow matching actual input data time and idclouds_minutes in “idclouds_tbpf.py”.
2. Move the code checking maximum track duration in the data against config set up to catch possible error when creating the sparse arrays in “trackstats_driver.py”.
3. Added an option to calculate PF land fraction for WRF-like landmask in “matchtbpf_func.py”.

* Rewrote mapping tracked feature to pixel-level files "mapfeature_driver.py".

1. Track stats file is now read in mapfeature_driver.py once, and the matching variables for each cloudid file are subsetted and passed into the map feature function for a single file. This avoids overloading the file system where too many processes load the same track stats file, causing time-outs and crashing in parallel mode. It also reduces the processing time for each file.
2. Rewrote mapmcspf.py and mapgeneric.py to adapt to the new workflow. Preliminary testing seem to be working.
3. Still need to rewrite mapcell_radar.py, but it should be largely similar to mapgeneric.py.

* Rewrote mapcell_radar.py following the new approach.

1. Cleaned up the codes in mapgeneric.py and mapmcspf.py.
2. Removed old run scripts and config files.

* Commented out writing Zarr format robust MCS track stats file since it is no longer used.

--- a/config/config_wrfda_asia_mcs.yml
+++ b/config/config_wrfda_asia_mcs.yml
@@ -1,42 +1,38 @@
 ---
-# Global GPM based MCS tracking configuration file
+# MCS tracking configuration file
 # Tracking uses collocated Tb + Precipitation
 
 # Processing steps:
 # Maybe worth nesting these in sets of dictionaries
-run_idfeature : False
-run_tracksingle : False
-run_gettracks : False
-run_trackstats : False
-run_identifymcs : False
-run_matchpf : False
-run_robustmcs : False
+run_idfeature : True
+run_tracksingle : True
+run_gettracks : True
+run_trackstats : True
+run_identifymcs : True
+run_matchpf : True
+run_robustmcs : True
 run_mapfeature : True
-run_speed: False
+run_speed : True
 
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
-run_parallel: 2
-nprocesses : 32  # Number of processors to use if run_parallel=1
+run_parallel: 1
+nprocesses : 30  # Number of processors to use if run_parallel=1
 
 # Start/end date and time
-#startdate: '20190122.0000'
-#enddate: '20190127.0000'
-#startdate: '20190101.0000'
-#enddate: '20190131.2300'
-#startdate: '20190101.0000'
-#enddate: '20200101.0000'
-startdate: '20180601.0000'
-enddate: '20190630.2300'
+#startdate: '20170601.0000'
+#enddate: '20170602.0000'
+startdate: '20170520.0000'
+enddate: '20170901.0000'
 
 # Specify date/time string format in the file name
 # E.g., radar_20181101.011503.nc --> yyyymodd.hhmmss
 # E.g., wrfout_2018-11-01_01:15:00 --> yyyy-mo-dd_hh:mm:ss
-time_format: 'yyyymoddhh'
+time_format: 'yyyymoddhhmm'
 # Input files directory
-clouddata_path: '/global/cscratch1/sd/feng045/SAAG/GPM/tb_rr/2018_2019/'
+clouddata_path: '/global/cscratch1/sd/feng045/waccem/TMeCSR/analysis_mean/tb_rr/'
 # Working directory for the tracking data
-root_path: '/global/cscratch1/sd/feng045/SAAG/GPM/pyflex_test2/'
+root_path: '/global/cscratch1/sd/feng045/waccem/TMeCSR/analysis_mean/'
 # Working sub-directory names
 tracking_path_name: 'tracking'
 stats_path_name: 'stats'
@@ -44,20 +40,20 @@ pixel_path_name: 'mcstracking'
 
 # Land mask file
 #input_data_directory: 'data_in/'
-landmask_filename: '/global/cscratch1/sd/feng045/SAAG/map_data/IMERG_landmask_saag.nc'
-landmask_varname: 'landseamask'
+landmask_filename: '/global/cscratch1/sd/feng045/waccem/TMeCSR/map_data/wrf_landmask.nc'
+landmask_varname: 'LANDMASK'
 
-# Specific to GPM Tb+IMERG combined dataset
-databasename:  'merg_'
-tb_varname:  'Tb'
-pcp_varname: 'precipitationCal'
-clouddatasource:  'gpmirimerg'
-pfdatasource:  'imerg'
-xcoord_name: 'lon'
-ycoord_name: 'lat'
-idclouds_hourly: 1  # 0:  No, 1:  Yes
-idclouds_minute: 30  # 0 or 30 min, which minute mark to use the Tb data
-idclouds_dt_thresh: 5  # [minute], time difference allowed between actual data and idclouds_minute
+# Input dataset structure
+tb_varname:  'tb'
+pcp_varname: 'rainrate'
+clouddatasource: 'model'
+pfdatasource:  'wrf'
+databasename:  'wrfout_rainrate_tb_'
+xcoord_name: 'lon2d'
+ycoord_name: 'lat2d'
+idclouds_hourly: 0  # 0: No (all times are used), 1: Yes (only hourly data is used)
+idclouds_minute: 00  # 0 or 30 min, which minute mark to use the Tb data
+idclouds_dt_thresh: 5.0  # [minute], time difference allowed between actual data and idclouds_minute
 datatimeresolution: 1.0  # hours
 # Minimum time difference threshold to match track stats with cloudid files
 match_tbpf_dt_thresh: 60.0  # seconds
@@ -68,7 +64,7 @@ feature_type: 'tb_pf'
 
 # Cloud identification parameters
 geolimits: [-90, -360, 90, 360] # 4-element array with plotting boundaries [lat_min, lon_min, lat_max, lon_max]
-pixel_radius:  10.0  # km
+pixel_radius:  9.0  # km
 timegap:  3.1  # hour
 area_thresh:  800  # km^2
 miss_thresh:  0.35  # Missing data fraction threshold
@@ -91,8 +87,8 @@ pf_link_area_thresh:  648.0  # [km^2]
 # Tracking parameters
 othresh:  0.5  # overlap fraction threshold
 nmaxlinks:  200  # Maximum number of clouds that any single cloud can be linked to
-maxnclouds:  3000  # Maximum number of clouds in one snapshot
-duration_range: [2, 200] # A vector [minlength,maxlength] to specify the duration range for the tracks
+maxnclouds:  2000  # Maximum number of clouds in one snapshot
+duration_range: [2, 300] # A vector [minlength,maxlength] to specify the duration range for the tracks
 #keepsingletrack: 1  # Keep tracks that has only 1 time
 #keep_singlemergesplit: 1  # Options: 0=All short tracks are removed, 1=Only short tracks without mergers or splits are removed
 # Flag to remove short-lived tracks [< min(duration_range)] that are not mergers/splits with other tracks
@@ -100,7 +96,7 @@ duration_range: [2, 200] # A vector [minlength,maxlength] to specify the duratio
 remove_shorttracks: 1
 # Set this flag to 1 to write a dense (2D) trackstats netCDF file
 # Note that for datasets with lots of tracks, the memory consumption could be very large
-trackstats_dense_netcdf: 1
+trackstats_dense_netcdf: 0
 
 # MCS Tb parameters
 mcs_tb_area_thresh:  40000  # Tb area threshold [km^2]
